<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senior_rviz_panel</name>
  <version>0.0.0</version>
  <description>RViz Panel for Senior Project</description>
  <maintainer email="ice.tennison@gmail.com">icetenny</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
